--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_ui_components:
-    git:
-      url: git@github.com:AndrewSithole/flutter_ui_components.git
-      ref: main
+#    git:
+#      url: git@github.com:AndrewSithole/flutter_ui_components.git
+#      ref: main
+    path: ../flutter_ui_components
 
 dev_dependencies:
   flutter_test:
